<resources>
    <string name="app_name" >Calculadora</string>
    <string name="titulo" >Calculator</string>
    <string name="Primer_Numero" >Primer Numero</string>
    <string name="Segundo_Numero" >Segundo Numero</string>
    <string name="limpiar" >Limpiar </string>
    <string name="calcular">Calcular</string>
    <string name="suma" >Suma</string>
    <string name="resta">Resta</string>
    <string name="multiplicacion">Multiplicacion</string>
    <string name="division" >Division</string>
    <string name="error_numero_uno">Digite el número uno</string>
    <string name="error_numero_dos">Digite el número dos</string>
    <string name="error_numero_tres">No puede dividir entre 0</string>
    <string-array name="opciones">
        <item>@string/suma</item>
        <item>@string/resta</item>
        <item>@string/multiplicacion</item>
        <item>@string/division</item>
    </string-array>
</resources>
